--- a/EqUiWebUi/Areas/Tiplife/Views/Electrode/_Legend.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/Electrode/_Legend.cshtml
@@ -4,7 +4,7 @@
     <table style="width:100%">
         <tr>
             <th>Type</th>
-            <th>animation</th>
+            <th>Animation</th>
             <th>Description</th>
         </tr>
         <tr>
@@ -13,7 +13,7 @@
             <td>Wear > 90% Or Dresses > 200</td>
         </tr>
         <tr>
-            <td>Severe warning</td>
+            <td>severe warning</td>
             <td class="@EqUiWebUi.Areas.Tiplife.TiplifeHelpers.getRowStyleByWearValue(pWear:99, nDress:0, nRparts:0, Status:"")"></td>
             <td>Wear > 98% Or Dresses > 210</td>
         </tr>
