--- a/EqUiWebUi/Content/CustomStyleTweeks.css
+++ b/EqUiWebUi/Content/CustomStyleTweeks.css
@@ -21,10 +21,9 @@
     max-width: 100%; /* Max Width of the popover (depending on the container!) */
 }
 
-/*when moved to bootstrap 4 "Label" class is gone. This is used in the scafolded froms so adding it again*/
+/*when moved to bootstrap 4 "Label" class is gone. This is used in the scaffolded forms so adding it again*/
 .control-label {
     display: inline-block;
     margin-bottom: .5rem;
     font-weight: bold;
 }
-
