--- a/EqUiWebUi/Views/Dynamic/_dynamicWebgridRunQueryAgainstDB.cshtml
+++ b/EqUiWebUi/Views/Dynamic/_dynamicWebgridRunQueryAgainstDB.cshtml
@@ -11,7 +11,7 @@
 <div class="card">
     <div class="card-header bg-warning">
         <h6 class="card-title">
-            Result
+            Query result
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1 text-black-50"></i></span>
         </h6>
     </div>
