--- a/EqUiWebUi/Views/Tableau/EmbeddedDesktop.cshtml
+++ b/EqUiWebUi/Views/Tableau/EmbeddedDesktop.cshtml
@@ -2,9 +2,17 @@
     ViewBag.Title = ViewBag.sheet;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="card">
+    <div class="card-header bg-dark text-white">
+        <h4>
+            Tableau: <strong>@ViewBag.sheet</strong>
+            <a class="fas fa-info-circle text-white" id="LegendPopover" href="#" data-container="body" data-toggle="popover" data-placement="bottom"></a>
+        </h4>
+    </div>
+    @*render the viz*@
+    <div id="viz" class="viz"></div>
+</div>
 
-@*render the viz*@
-<div id="viz" class="viz"></div>
 
 @section scripts{
     <script src="~/Scripts/tableau-2.0.0.min.js"></script>
@@ -101,6 +109,18 @@
          * Hook into the window resize event to resize when the user resizes the screen.
          */
         $(window).resize(resize);
+
+        //enable popover for legend
+        $("#LegendPopover").popover({
+            html: true,
+            content: function () {
+                return $.ajax({
+                    url: '@Url.Action("_legend")',
+                    dataType: 'html',
+                    async: false
+                }).responseText;
+            }
+        });
 
         //full with screen
         $("#allcontent").removeClass("body-content");
