--- a/EqUiWebUi/Areas/user_management/Views/UserScreens/Screenmaster.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/UserScreens/Screenmaster.cshtml
@@ -22,8 +22,8 @@
 <hr />
 
 <div class="card">
-    <div class="card-header bg-danger">
-        <h4 class="card-title">ScreenMaster messenger</h4>
+    <div class="card-header bg-dark">
+        <h4 class="card-title text-white">ScreenMaster messenger</h4>
     </div>
     <div class="card-body">
         <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
@@ -41,8 +41,8 @@
 <hr />
 
 <div class="card">
-    <div class="card-header bg-danger">
-        <h4 class="card-title">ScreenMaster Iframe</h4>
+    <div class="card-header bg-dark">
+        <h4 class="card-title text-white">ScreenMaster Iframe</h4>
     </div>
     <div class="card-body">
         <input id="ScreenMasterBtnSendUrl" class="btn btn-warning JQresultTriggerBtn" type="button" value="SendUrl" href="@Url.Action("DisplayPage", new {area = "user_management", url = "http://equi", showtime = 10 })" />
