paramter view update

--- a/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
@@ -75,8 +75,8 @@
             Search the last weld of a Weldspot
         <p>
         <p>
-            <a href="~//Welding/WM/" class="btn btn-primary btn-sm">Optimalisation Tool &raquo;</a>
-            Search for parameters with the same plateCombination
+            <a href="~//Welding/WM/_Parameters" class="btn btn-primary btn-sm">Optimalisation Tool &raquo;</a>
+            all data needed for spot optimalisation
         <p>
         <p>
             <a href="~//Welding/WM/" class="btn btn-primary btn-sm">Dress Tool &raquo;</a>
